# Stellar-CDT

./: README.md
client/: next.config.ts
client/app/: page.tsx
client/components/: Contract.tsx  Navbar.tsx
client/hooks/: contract.ts
contract/: Cargo.toml
contract/contracts/contract/src/: lib.rs  test.rs
contract/contracts/contract/test_snapshots/test/: test_create_campaign.1.json  test_donate_to_campaign.1.json  test_get_all_campaigns.1.json  test_get_donor_count.1.json  test_multiple_donors.1.json  test_same_donor_multiple_donations.1.json
