[workspace]
resolver = "2"

members = [
    "contracts/*",
]

[workspace.dependencies]
# Soroban SDK version
soroban-sdk = "25"

# Optimized build configuration for Stellar Soroban contracts
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# Release profile with logs enabled for debugging and testing
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
